--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 !inc
 !other
 other/*.wav
-!**.md
-!**.py
+!**/*.md
+!**/*.py
 !LICENSE
-!**.c
-!**.cpp
-!**.h
-!**.s
-!**.jpg
+!**/*.c
+!**/*.cpp
+!**/*.h
+!**/*.s
+!**/*.jpg
